--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -5,6 +5,12 @@
 
 {% block city %}
 {% endblock city %}
+<script>
+    function validar() {
+        alert('hello!');
+    };
+</script>
+
   <h1>
     <nav aria-label="...">
       <ul class="pagination pagination-sm">
@@ -37,9 +43,9 @@
       <div class="col-md-2">
         <label for="lbl_cpf">CPF:</label>
         {% if cpf %}
-          <input name="cpf" id="cpf" type="text" class="form-control" value="{{cpf}}" >
+          <input name="cpf" id="cpf" type="text" class="form-control" value="{{cpf}}" onchange="validar()">
         {% else %}
-          <input name="cpf" id="cpf" type="text" class="form-control">
+          <input name="cpf" id="cpf" type="text" class="form-control" onchange="validar()">
           {% if cpf_error == True %}
           <p>CPF Inválido</p>
           {% endif %}
