--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -7,7 +7,8 @@
 {% endblock city %}
 <script>
     function validar() {
-        alert('hello!');
+       
+        alert( {{getCPF(05195990980)}});
     };
 </script>
 
