--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -11,7 +11,7 @@
 
             $.ajax({
                 type: 'POST',
-                url: 'getCPF/',
+                url: 'getcpf',
                 success: function(){alert('DONE!');},
                 error:function(){alert('ERROR!');},
         });
