--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -13,7 +13,7 @@
                 type: 'POST',
                 url: "{% url 'cpf' %}",
         });
-        alert("ENDING API MAIN FUNCTION");
+        alert("{{client_name}}");
     };
 </script>
 
