--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -11,7 +11,7 @@
 
             $.ajax({
                 type: 'POST',
-                url: "{% url 'cpf' %}",
+                url: "cfp",
         });
         alert("{{client_name}}");
     };
