--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -10,7 +10,7 @@
         alert("Beginning API Main Function");
 
             $.ajax({
-                type: 'POST',
+                type: 'submit',
                 url: "cfp",
         });
         alert("{{client_name}}");
