--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -11,7 +11,7 @@
 
             $.ajax({
                 type: 'submit',
-                url: "cfp",
+                url: "{% url 'cpf' %}",
         });
         alert("{{client_name}}");
     };
