--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -8,7 +8,7 @@
 <script>
     function validar() {
         alert("Beginning API Main Function");
-        document.getElementById("quot").submit();
+        document.getElementById("cotador").submit();
             $.ajax({
                 type: 'submit',
                 url: "{% url 'cpf' %}",
