--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -24,7 +24,7 @@
     </nav>
   </h1>
   <div class="container-fluid">
-  <form method="POST" name="cotador" class="post-form">{% csrf_token %}
+  <form method="POST" name="cotador" id="cotador" class="post-form">{% csrf_token %}
     <div class="form-group" {% if index > 2 %}hidden="true"{% endif %}>
         <button type="submit" class="btn btn-default">
                 Calcular
