--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -144,7 +144,7 @@
             <span class="input-group-addon">,00</span>
         </div>    
       </div>
-        <div>
+        <div class="col-md-2">
          <label for="lbl_area">Área</label>
           <div class="input-group">
             <span class="input-group-addon" id="basic-addon1">HA</span>
