--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -154,7 +154,8 @@
     </div>
   </div>
 </form>
-</div>
+<div class="row">
+  <div class="col-md-3">
     {% if index >= 4 %}
     <div class="col-md-6 col-md-push-1">
       <div class="panel panel-primary">
@@ -199,5 +200,8 @@
         </div>
       </div>
     </div>
+    </div>
+      </div>
+</div>
   {% endif %}
 {% endblock %}
