--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -164,7 +164,7 @@
           <table class="table table-bordered">
             <tr>
               <td>Municipio:</td>
-              <td> {{city}}</td>
+              <td> {{city.name}}</td>
             </tr>
             <tr>
               <td>Prod. Esperada:</td>
