--- a/cotador/templates/cotador/cotador.html
+++ b/cotador/templates/cotador/cotador.html
@@ -23,7 +23,7 @@
   </h1>
   <div class="container-fluid">
   <form method="POST" name="cotador" id="cotador" class="post-form">{% csrf_token %}
-    <div class="form-group" {% if index >= 2 %}hidden="true"{% endif %}>
+    <div class="form-group">
         <button type="submit" class="btn btn-default">
                 Calcular
             </button>
