--- a/cotador/templates/cotador/multirrisco.html
+++ b/cotador/templates/cotador/multirrisco.html
@@ -56,11 +56,11 @@
           {% endif %}
         </div>
         <div class="col-md-3">
-          <label for="lbl_client_name">Nome do Segurado:</label>
+          <label for="lbl_insured_name">Nome do Segurado:</label>
           {% if client_name %}
-            <input name="client_name" type="text" class="form-control" value="{{client_name}}" disabled>
+            <input name="insured_name" type="text" class="form-control" value="{{insured_name}}" disabled>
           {% else %}
-            <input name="client_name" type="text" class="form-control">
+            <input name="insured_name" type="text" class="form-control">
           {% endif %}
         </div>
       </div>
