--- a/cotador/templates/cotador/multirrisco.html
+++ b/cotador/templates/cotador/multirrisco.html
@@ -47,9 +47,9 @@
         <div class="col-md-2">
           <label for="lbl_cpf">CPF:</label>
           {% if cpf_cnpj %}
-            <input name="cpf" id="cpf" type="text" class="form-control" value="{{cpf_cnpj}}" onchange="validar()">
+            <input name="cpf_cnpj" id="cpf_cnpj" type="text" class="form-control" value="{{cpf_cnpj}}" onchange="validar()">
           {% else %}
-            <input name="cpf" id="cpf" type="text" class="form-control" onchange="validar()">
+            <input name="cpf_cnpj" id="cpf_cnpj" type="text" class="form-control" onchange="validar()">
             {% if cpf_error == True %}
             <p>CPF Inválido</p>
             {% endif %}
