--- a/cotador/templates/cotador/multirrisco.html
+++ b/cotador/templates/cotador/multirrisco.html
@@ -57,7 +57,7 @@
         </div>
         <div class="col-md-3">
           <label for="lbl_insured_name">Nome do Segurado:</label>
-          {% if client_name %}
+          {% if insured_name %}
             <input name="insured_name" type="text" class="form-control" value="{{insured_name}}" disabled>
           {% else %}
             <input name="insured_name" type="text" class="form-control">
