--- a/cotador/templates/cotador/pdc.html
+++ b/cotador/templates/cotador/pdc.html
@@ -6,7 +6,7 @@
         document.getElementById("cotador").submit();
     };
 </script>
-  <form method="POST" name="cotador" id="cotador" class="post-form">{% csrf_token %}
+  <form method="GET" name="cotador" id="cotador" class="post-form">{% csrf_token %}
     <div class="form-group">
         <button type="submit" class="btn btn-default">
           Calcular
