--- a/cotador/templates/cotador/pdc.html
+++ b/cotador/templates/cotador/pdc.html
@@ -6,17 +6,20 @@
         document.getElementById("cotador").submit();
     };
 </script>
-  <form method="GET" name="cotador" id="cotador" class="post-form">{% csrf_token %}
-    <div class="form-group">
-        <button type="submit" class="btn btn-default">
-          Calcular
-        </button>
-      <div class="row">
-        <div class="col-md-2">
-          <label for="lbl_cpf">CPF:</label>
-          <input name="temperature" id="temperature" type="text" class="form-control">
-        </div>
-      </div>
+<form method="GET" name="cotador" id="cotador" class="post-form">{% csrf_token %}
+<div class="form-group">
+    <button type="submit" class="btn btn-default">
+      Calcular
+    </button>
+  <div class="row">
+    <div class="col-md-2">
+      <label for="lbl_cpf">CPF:</label>
+      <input name="temperature" id="temperature" type="text" class="form-control">
     </div>
-  </form>
+  </div>
+</div>
+</form>
+{% if temp %}
+<a> {{temp}} °C </a>
+{% endif %}
 {% endblock %}
