--- a/cotador/templates/cotador/pdc.html
+++ b/cotador/templates/cotador/pdc.html
@@ -13,7 +13,7 @@
     </button>
   <div class="row">
     <div class="col-md-2">
-      <label for="lbl_cpf">CPF:</label>
+      <label for="lbl_cpf">Temperature:</label>
       <input name="temperature" id="temperature" type="text" class="form-control">
     </div>
   </div>
