--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -7,6 +7,7 @@
     };
 </script>
 <form method="GET" name="cotador" id="cotador" class="post-form">{% csrf_token %}
+<img src="http://project-zeta.one/meteorologia/pdc/clima1.jpg"/>
 <div class="form-group">
     <button type="submit" class="btn btn-default">
       Calcular
