--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -7,18 +7,22 @@
     };
 </script>
 <form method="GET" name="cotador" id="cotador" class="post-form">{% csrf_token %}
-<img src="http://project-zeta.one/meteorologia/pdc/clima1.jpg" height="250"/>
-<div class="form-group">
-    <button type="submit" class="btn btn-default">
-      Calcular
-    </button>
-  <div class="row">
-    <div class="col-md-2">
-      <label for="lbl_cpf">Temperature:</label>
-      <input name="temperature" id="temperature" type="text" class="form-control">
+    <div class="row">
+        <div class="col-md-push-1 col-md-pull-1">
+            <img src="http://project-zeta.one/meteorologia/pdc/clima1.jpg" width="750px" height="250px"/>
+        </div>
     </div>
-  </div>
-</div>
+    <div class="form-group">
+        <button type="submit" class="btn btn-default">
+          Calcular
+        </button>
+      <div class="row">
+        <div class="col-md-2">
+          <label for="lbl_cpf">Temperature:</label>
+          <input name="temperature" id="temperature" type="text" class="form-control">
+        </div>
+      </div>
+    </div>
 </form>
 {% if temp %}
 <a> {{temp}} °C </a>
