--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -8,8 +8,8 @@
 </script>
 <form method="GET" name="cotador" id="cotador" class="post-form">{% csrf_token %}
     <div class="row">
-        <div class="col-md-push-1 col-md-pull-1">
-            <img src="http://project-zeta.one/meteorologia/pdc/clima1.jpg" width="750px" height="250px"/>
+        <div class="col-md-push-2 col-md-pull-2">
+            <img src="http://project-zeta.one/meteorologia/pdc/clima1.jpg" height="250px"/>
         </div>
     </div>
     <div class="form-group">
