--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -8,7 +8,7 @@
 </script>
 <form method="GET" name="cotador" id="cotador" class="post-form">{% csrf_token %}
     <div class="row">
-        <div class="col-md-push-2 col-md-pull-2">
+        <div class="col-md-push-2 col-md-pull-2 col-md-10">
             <img src="http://project-zeta.one/meteorologia/pdc/clima1.jpg" height="250px"/>
         </div>
     </div>
