--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -9,7 +9,7 @@
 <form method="GET" name="cotador" id="cotador" class="post-form">{% csrf_token %}
     <div class="row">
         <div class="col-md-push-1 col-md-pull-10 col-md-10">
-            <img src="http://project-zeta.one/meteorologia/pdc/clima1.jpg" height="250px"/>
+            <img src="http://project-zeta.one/meteorologia/pdc/sky.jpg"/>
         </div>
     </div>
     <div class="form-group">
