--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -6,12 +6,14 @@
         document.getElementById("cotador").submit();
     };
 </script>
-<form method="GET" name="cotador" id="cotador" class="post-form">{% csrf_token %}
-    <div class="row">
-        <div class="col-md-push-1 col-md-pull-1 col-md-12">
+<div class="row">
+    <div class="col-md-push-1 col-md-pull-1 col-md-12">
+        <div class="panel panel-primary">
             <img src="http://project-zeta.one/meteorologia/pdc/sky.jpg"/>
         </div>
     </div>
+</div>
+<form method="GET" name="cotador" id="cotador" class="post-form">{% csrf_token %}
     <div class="form-group">
         <button type="submit" class="btn btn-default">
           Calcular
