--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -7,7 +7,7 @@
     };
 </script>
 <div class="row">
-    <div class="col-md-push-1 col-md-pull-1 col-md-12">
+    <div class="col-md-push-1 col-md-10">
         <div class="panel panel-primary">
             <img src="http://project-zeta.one/meteorologia/pdc/sky.jpg"/>
         </div>
