--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -9,7 +9,7 @@
 <div class="row">
     <div class="col-md-push-1 col-md-10">
         <div class="panel panel-primary">
-            <img src="http://project-zeta.one/meteorologia/pdc/sky.jpg"/>
+            <p><img src="http://project-zeta.one/meteorologia/pdc/sky.jpg"/></p>
         </div>
     </div>
 </div>
