--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -8,8 +8,8 @@
 </script>
 <div class="row">
     <div class="col-md-push-1 col-md-10">
-        <div class="panel panel-primary">
-            <p><img src="http://project-zeta.one/meteorologia/pdc/sky.jpg"/></p>
+        <div class="panel panel-primary" src="http://project-zeta.one/meteorologia/pdc/sky.jpg">
+            <p><img /></p>
         </div>
     </div>
 </div>
