--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -9,7 +9,7 @@
 <div class="row">
     <div class="col-md-12">
         <div class="panel panel-primary">
-            <p><img class="img-responsive" src="http://project-zeta.one/meteorologia/pdc/sky.jpg"/></p>
+            <p><img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/sky.jpg"/></p>
         </div>
     </div>
 </div>
