--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -10,7 +10,15 @@
     <div class="col-md-12">
         <p><img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/sky.jpg"/></p>
     </div>
+
+    {% if temp %}
+    <div class="col-md-12">
+        <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png"/>
+        <a>{{temp}} °C </a>
+    </div>
+    {% endif %}
 </div>
+<br><br>
 <form method="GET" name="cotador" id="cotador" class="post-form">{% csrf_token %}
     <div class="form-group">
         <button type="submit" class="btn btn-default">
@@ -24,7 +32,5 @@
       </div>
     </div>
 </form>
-{% if temp %}
-<a> {{temp}} °C </a>
-{% endif %}
+
 {% endblock %}
