--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -12,6 +12,9 @@
     </div>
 
     {% if temp %}
+    <table class="table">
+        <tr class="active">...</tr>
+    </table>
     <div class="col-md-12">
         <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png"/>
         <a>{{temp}} °C </a>
