--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -13,7 +13,14 @@
 
     {% if temp %}
     <table class="table">
-        <tr class="active">...</tr>
+        <tr class="active">
+            <td>
+                <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png"/>
+            </td>
+            <td>
+                <a>{{temp}} °C </a>
+            </td>
+        </tr>
     </table>
     <div class="col-md-12">
         <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png"/>
