--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -12,11 +12,11 @@
     </div>
 
     {% if temp %}
-    <div class="col-md-12">
+    <div class="col-md-4">
     <table class="table">
         <tr class="active">
             <td>
-                <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png"/>
+                <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png" wdith="75px" height="75px"/>
             </td>
             <td>
                 <a>{{temp}} °C </a>
