--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -16,7 +16,9 @@
     <table class="table">
         <tr class="active">
             <td>
+                <div class="col-md-2">
                 <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png" wdith="75px" height="75px"/>
+                </div>
             </td>
             <td>
                 <a>{{temp}} °C </a>
