--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -19,7 +19,7 @@
                 <div class="col-md-3">
                 <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png" wdith="75px" height="75px"/>
                 </div>
-                <a>{{temp}} °C </a>
+                <a class="pull-md-center">{{temp}} °C </a>
             </td>
             <td>
                 
