--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -12,7 +12,7 @@
     </div>
 
     {% if temp %}
-    <div class="col-md-4">
+    <div class="col-md-4 pull-center">
     <table class="table">
         <tr class="active">
             <td>
