--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -17,9 +17,11 @@
         <tr class="active">
             <td>
                 <div class="col-md-3">
-                <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png" wdith="75px" height="75px"/>
+                    <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png" wdith="75px" height="75px"/>
                 </div>
-                <a class="pull-md-center">{{temp}} °C </a>
+                <div class="col-md-3">
+                    <a class="pull-md-center">{{temp}} °C </a>
+                </div>
             </td>
             <td>
                 
