--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -20,7 +20,7 @@
                     <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png" wdith="75px" height="75px"/>
                 </div>
                 <div class="col-md-3">
-                    <a class="pull-md-center">{{temp}} °C </a>
+                    <a margin-top="10px">{{temp}} °C </a>
                 </div>
             </td>
             <td>
