--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -20,6 +20,7 @@
                 <div class="col-md-3">
                     <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png" wdith="75px" height="75px"/>
                 </div>
+                <h2 class="title-extra-large-5 md-title-extra-large-3 xs-title-extra-large-4">MY JOB.</h2>
                 <div class="col-md-3">
                     <a margin-top="10px">{{temp}} °C </a>
                 </div>
