--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -16,7 +16,7 @@
                     <div class="col-md-3">
                         <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png" wdith="75px" height="75px"/>
                     </div>
-                    <h1 class="title-extra-large-5 md-title-extra-large-5 xs-title-extra-large-5"><a>{{temp}} °C </a></h1>
+                    <h1 class="title-extra-large-5 md-title-extra-large-5 xs-title-extra-large-5">{{temp}} °C</h1>
                 </td>
             </tr>
         </table>
