--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -9,14 +9,14 @@
 
 {% if temp %}
 <div class="row">
-    <div class="col-md-4 pull-center">
+    <div class="col-md-4">
         <table class="table">
             <tr class="active">
                 <td>
                     <div class="col-md-3">
                         <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png" wdith="75px" height="75px"/>
                     </div>
-                    <h1 class="title-extra-large-5 md-title-extra-large-5 xs-title-extra-large-5">{{temp}} °C</h1>
+                    <h1 class="title-extra-large-5 md-title-extra-large-8 xs-title-extra-large-5"><a>{{temp}} °C</a></h1>
                 </td>
             </tr>
         </table>
