--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -14,7 +14,7 @@
             <tr class="active">
                 <td>
                     <div class="col-md-8">
-                        <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png" wdith="75px" height="75px"/>
+                        <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png"/>
                     </div>
                     <h1 class="display-1"><a>{{temp}} °C</a></h1>
                 </td>
