--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -13,10 +13,10 @@
         <table class="table">
             <tr class="active">
                 <td>
-                    <div class="col-md-8">
+                    <div class="col-md-6">
                         <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png"/>
                     </div>
-                    <h1 class="display-1"><a>{{temp}} °C</a></h1>
+                    <h1 class="display-1">{{temp}} °C</h1>
                 </td>
             </tr>
         </table>
