--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -9,14 +9,14 @@
 
 {% if temp %}
 <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-3 pull-center">
         <table class="table">
             <tr class="active">
                 <td>
                     <div class="col-md-6">
                         <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png"/>
                     </div>
-                    <h1 class="display-1">{{temp}} °C</h1>
+                    <h1 class="display-1" font-size="75">{{temp}} °C</h1>
                 </td>
             </tr>
         </table>
