--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -16,7 +16,7 @@
                     <div class="col-md-6">
                         <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png"/>
                     </div>
-                    <h1 class="display-1" font-size="75px">{{temp}} °C</h1>
+                    <h1 style="font-size:75px;">{{temp}} °C</h1>
                 </td>
             </tr>
         </table>
