--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -16,7 +16,7 @@
                     <div class="col-md-6">
                         <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png"/>
                     </div>
-                    <div class="col-md-6" style="font-size:35px;"><a>{{temp}} °C</a></div>
+                    <div class="col-md-6" style="font-size:32px;">{{temp}} °C</div>
                 </td>
             </tr>
         </table>
