--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -11,6 +11,16 @@
 <div class="row">
     <div class="col-md-3 pull-center">
         <table class="table">
+            <tr>
+                <td>
+                    <div class="col-md-6">
+                        <label>
+                            <h1 style="font-size: 50px"><a>Maringá - PR</a></h1>
+                            <h1 style="font-size: 40px"><a>{{today}}</a></h1>
+                        </label>
+                    </div>      
+                </td>
+            </tr>
             <tr class="active">
                 <td>
                     <div class="col-md-6">
